tests/fixtures/negative/publisher_used_twice.wrela
// expect: SEM0039: publisher pub is assigned to more than one producer field
module negative.publisher_used_twice

module machine.x86_64.topic
data TopicIdentity { label: StringLiteral }
class ReliableTopic<T> { identity: TopicIdentity; fn publisher(self) -> ReliablePublisher<T> { return ReliablePublisher<T>(topic = self) } }
data ReliablePublisher<T> { topic: ReliableTopic<T> }

module negative.publisher_used_twice.app
use { ReliablePublisher, ReliableTopic, TopicIdentity } from machine.x86_64.topic

executor Producer { out: ReliablePublisher<U64>; start fn run(self) -> never { while true {} } }

image Bad {
    transitions { delegated_hardware -> owned_hardware }
    phase delegated_hardware(hardware: DelegatedHardware) -> OwnedHardware { return hardware.exit_to_owned_hardware() }
    phase owned_hardware(hardware: OwnedHardware) -> never {
        let topic = ReliableTopic<U64>(identity = TopicIdentity(label = "counter"))
        let pub = topic.publisher()
        let a = Producer(out = pub)
        let b = Producer(out = pub)
        while true {}
    }
}
